fix z-index issues

--- a/style/components/backdrop/utils/variables.scss
+++ b/style/components/backdrop/utils/variables.scss
@@ -1,2 +1,2 @@
 $backdrop--transition: all 200ms ease-in-out;
-$backdrop--z-index: 1049;
+$backdrop--z-index: 1000000;
